SuperMelee: Multi-Shuffle statt Einzel-Suche mit großem Limit
Statt eines einzigen Shuffle-Versuchs mit 20 M Knoten (geteilt über
Pass 1 + Pass 2) werden nun bis zu 10 Shuffles mit je 200 K Knoten/Pass
durchgeführt. Dadurch wird die Multiplikator-Explosion vermieden, die
bei 5 Spieltag-Levels × 5 Fairness-Levels × 20 M ≈ 500 M Knoten und
~50 Sekunden Blockade führte.

Findet eine Lösung: typischerweise in Pass 1 oder 2 des ersten Shuffles
(<<1 000 Knoten). Gibt es keine Lösung: jeder Shuffle scheitert schnell
(≤ 200 K Knoten), Gesamt-Budget ≤ 4 M statt 20 M pro Algorithmus-Aufruf.

Pass 1 und Pass 2 erhalten jeweils eigene Zähler, damit Pass 2 immer
sein volles Budget erhält — unabhängig davon, wie viele Knoten Pass 1
(mit dichterem unionMatrix) verbraucht hat.

Neue Tests:
- testDichteSoftMatrix_leereHardMatrix_findestLoesungSchnell
- testVieleRunden_scheitertSchnellNachErschoepfung (@Timeout 5 s)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>